@@ -1,6 +1,8 @@
 openmediavault (0.3.0.10) stable; urgency=low
 
   * Add ability to group privileges grid.
+  * Improve workflow, e.g. add typeahead to user/group comboboxes.
+  * Mantis 0000469: Shared Folders: ACL - Filter on/off system users/groups.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Thu, 17 May 2012 00:28:53 +0200
 
